# depth-dataset-builder

./: Dockerfile  LICENSE  README.md  add_video_to_db.py  add_video_to_model.py  align_frames_with_lidar.py  anafi_metadata.py  build_pcl_util.sh  bundle_adjustment.py  cli_utils.py  compare_2_cams.py  construct_evaluation_metadata.py  convert_dataset.py  convert_euroc.py  depth_evaluation.py  dxf_to_ply.py  edit_exif.py  euroc2colmap.py  extract_pictures_from_model.py  extract_video_from_model.py  extract_video_with_gps.py  filter_colmap_model.py  generate_pair_list.py  generate_sky_masks.py  global_options.py  inference_toolkit.py  install_dependencies.sh  las2ply.py  main_pipeline.py  main_pipeline_no_lidar.py  meshlab_xml_writer.py  picture_localization.py  prepare_images.py  prepare_workspace.py  requirements.txt  resize_colmap_cameras.py  split_dataset.py  to_kitti_format.py  video_localization.py  videos_to_colmap.py  (+2 more)
colmap/: read_model.py
colmap_util/: read_model.py
evaluation_toolkit/: README.md  setup.py
evaluation_toolkit/evaluation_toolkit/: depth_evaluation.py  inference_toolkit.py
pcl_util/: CMakeLists.txt  cloud_registrator.cpp  create_vis_file.cpp  mesh_triangulator.cpp  normals_transfer.cpp  pointcloud_sor.cpp  pointcloud_subsampler.cpp  pointcloud_subsampler.h
wrappers/: __init__.py  cloudcompare.py  colmap.py  default_wrapper.py  eth3d.py  ffmpeg.py  pcl_util.py  pdraw.py
